package billiardsalon.menuitems;

public enum MenuItemType {
    FOOD,
    BEVERAGE;
}
